pkg/plugins/policies/meshtimeout/plugin/testdata/outbound_with_defaults_listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 10001
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      routeConfig:
        name: outbound:backend
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/service=web&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: backend
          routes:
          - match:
              prefix: /
            route:
              cluster: backend
              timeout: 15s
      statPrefix: "outbound_127_0_0_1_10001"
      streamIdleTimeout: 1800s
name: outbound:127.0.0.1:10001
trafficDirection: OUTBOUND
